--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-action": "^1.2.2",
+    "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
