--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-responsive": "^1.2.7",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
@@ -24,6 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "serve" : "surge ./build web-utt.surge.sh"
+    "serve": "surge ./build web-utt.surge.sh"
   }
 }
